--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "three": "^0.143.0",
+    "three-csg-ts": "^3.1.11",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
